fixed logo alignment

--- a/src/client/styles/styles.less
+++ b/src/client/styles/styles.less
@@ -900,6 +900,7 @@ Copyright (c) 2014 Daniel Eden
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-items: center;
     
     .sponsor {
         margin: 0 0 40px;
